--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,11 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "node_modules/aos/dist/aos.css",
               "src/styles.scss"
             ],
             "scripts": [
+              "node_modules/aos/dist/aos.cjs.js",
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           },
