--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.2.3",
     "rxjs": "~7.5.0",
+    "sweetalert": "^2.1.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
